<resources>
    <string name="app_name">travelog01</string>
    <string name="title_Story">Story</string>
    <string name="title_Report">Report</string>
    <string name="title_Write">Write</string>
    <string name="title_Map">Map</string>
    <string name="title_Settings">Settings</string>

    <string name="input_title">Please input title…</string>
    <string name="input_text">Any idea about trip?</string>

    <string name="cancel">Cancel</string>
    <string name="title">Please select time</string>
    <string name="confirm">Confirm</string>

    <string name="select_date">Select emotion</string>
    <string name="current_date">Emotion</string>
    <string name="select_time">Select time</string>
    <string name="current_time">Time</string>

    <string name="font_medium">medium</string>
    <string name="font_regular">regular</string>

</resources>
